# faddeevas_gpu

./: .gitignore  CMakeLists.txt  README.md  run_cerrf.cpp  run_cerrf.h  run_cerrf.h.template  run_opencl.cpp  run_opencl_abrarov_quine.cpp
abrarov_quine_2011/: ErrorFunctions.c  ErrorFunctions.h  coefficients.h  definitions.h  wofz.cl
abrarov_quine_2011_rev3/: ErrorFunctions.c  ErrorFunctions.h  coefficients.h  definitions.h  wofz.cl
acm_algorithm_680/: ErrorFunctions.c  ErrorFunctions.h  definitions.h  wofz.cl
acm_algorithm_680_rev3/: ErrorFunctions.c  ErrorFunctions.h  definitions.h  wofz.cl
cernlib_base/: cerrf.cl
cernlib_base_include/: cerrf.cl  cerrf_impl.h
cernlib_c/: ErrorFunctions.h  wofz.cl
cernlib_c_rev2/: ErrorFunctions.c  ErrorFunctions.h  definitions.h  wofz.cl
cernlib_optimised/: cerrf.cl
cernlib_optimised_include/: cerrf.cl  cerrf_impl.h
cernlib_rev6_c/: definitions.h  wofz.cl
common/: benchmark_item.cpp  benchmark_item.h  definitions.h  helper_functions.c  helper_functions.h
data/20210819_abq2011_rev2/: abq2011_rev2_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_160109.log.xz  abq2011_rev2_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_160109.times.xz  abq2011_rev2_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_155829.log.xz  abq2011_rev2_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_155829.times.xz  abq2011_rev2_sqrt2_r0__titanv___opencl_pid0_did0_20210819_155744.log.xz  abq2011_rev2_sqrt2_r0__titanv___opencl_pid0_did0_20210819_155744.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_abq2011_rev3/: abq2011_rev3_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_161104.log.xz  abq2011_rev3_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_161104.times.xz  abq2011_rev3_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_161045.log.xz  abq2011_rev3_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_161045.times.xz  abq2011_rev3_sqrt2_r0__titanv___opencl_pid0_did0_20210819_160938.log.xz  abq2011_rev3_sqrt2_r0__titanv___opencl_pid0_did0_20210819_160938.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_abq2011_rev3_daw/: abq2011_rev3_daw_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_161405.log.xz  abq2011_rev3_daw_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_161405.times.xz  abq2011_rev3_daw_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_161758.log.xz  abq2011_rev3_daw_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_161758.times.xz  abq2011_rev3_daw_sqrt2_r0__titanv___opencl_pid0_did0_20210819_161339.log.xz  abq2011_rev3_daw_sqrt2_r0__titanv___opencl_pid0_did0_20210819_161339.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_alg680_rev2/: alg680_rev2_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_154418.log.xz  alg680_rev2_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_154418.times.xz  alg680_rev2_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_154344.log.xz  alg680_rev2_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_154344.times.xz  alg680_rev2_sqrt2_r0__titanv___opencl_pid0_did0_20210819_154313.log.xz  alg680_rev2_sqrt2_r0__titanv___opencl_pid0_did0_20210819_154313.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_alg680_rev3/: alg680_rev3_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_154909.log.xz  alg680_rev3_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_154909.times.xz  alg680_rev3_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_154740.log.xz  alg680_rev3_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_154740.times.xz  alg680_rev3_sqrt2_r0__titanv___opencl_pid0_did0_20210819_154720.log.xz  alg680_rev3_sqrt2_r0__titanv___opencl_pid0_did0_20210819_154720.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_alg680_rev3_daw/: alg680_rev3_daw_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_155313.log.xz  alg680_rev3_daw_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_155313.times.xz  alg680_rev3_daw_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_155404.log.xz  alg680_rev3_daw_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_155404.times.xz  alg680_rev3_daw_sqrt2_r0__titanv___opencl_pid0_did0_20210819_155248.log.xz  alg680_rev3_daw_sqrt2_r0__titanv___opencl_pid0_did0_20210819_155248.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_cernlib_c/: cernlib_c_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_151351.log.xz  cernlib_c_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_151351.times.xz  cernlib_c_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_151309.log.xz  cernlib_c_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_151309.times.xz  cernlib_c_sqrt2_r0__titanv___opencl_pid0_did0_20210819_151203.log.xz  cernlib_c_sqrt2_r0__titanv___opencl_pid0_did0_20210819_151203.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_cernlib_rev5_c/: cernlib_rev5_c_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_151931.log.xz  cernlib_rev5_c_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_151931.times.xz  cernlib_rev5_c_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_151847.log.xz  cernlib_rev5_c_sqrt2_r0__radeonvii___opencl_pid1_did0_20210819_151847.times.xz  cernlib_rev5_c_sqrt2_r0__titanv___opencl_pid0_did0_20210819_151747.log.xz  cernlib_rev5_c_sqrt2_r0__titanv___opencl_pid0_did0_20210819_151747.times.xz  sqrt2_r0_amd1950x.toml  sqrt2_r0_radeonvii.toml  sqrt2_r0_titanv.toml
data/20210819_cernlib_rev6_c/: cernlib_rev6_c_sqrt2_r0__amd1950x___opencl_pid2_did0_20210819_152324.log.xz  sqrt2_r0_amd1950x.toml  (+7 more)
dawson/: coefficients.c  coefficients.h  coefficients_common.c  coefficients_dabs_d10.c  coefficients_drel_d16.c  dawson.h  definitions.h  run_wofz_domain.cpp  run_wofz_domain_random.cpp  run_wofz_domain_timing.cpp  test_cerrf.c
dawson_abq2018/: coefficients.c  coefficients.h  dawson.h  definitions.h  run_wofz_domain.cpp  run_wofz_domain_random.cpp  run_wofz_domain_timing.cpp  test_cerrf.c
hip/: CMakeLists.txt  run_cerrf_base.cpp  run_cerrf_optimised.cpp
(+8 files in other folders)
